VAN-17352 high contrast gear icon fixes

--- a/vtr-ui/src/app/components/widgets/widget-quicksettings-list/widget-quicksettings-list.component.scss
+++ b/vtr-ui/src/app/components/widgets/widget-quicksettings-list/widget-quicksettings-list.component.scss
@@ -66,11 +66,11 @@
 									color: $gaming_grey_lightest;
 									line-height: 3.2rem;
 									position: relative;
-									@media #{$black-on-white} {
-										color: $gaming_lightest;
-									}
 									@media #{$white-on-black} {
-										color: $gaming_lightest;
+									color: $gaming_lightest;
+									}
+									@media #{$black-on-white} {
+									color: $high-contrast-grey;
 									}
 									&::after {
 										content: "";
